--- a/po/tr.po
+++ b/po/tr.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Yaşar Çiv, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2015-01-12 13:13+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-09-18 10:23+0000\n"
+"Last-Translator: Yaşar Çiv\n"
 "Language-Team: Turkish (http://www.transifex.com/xfdashboard/xfdashboard/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,25 +26,25 @@ msgstr ""
 #: ../data/xfdashboard.desktop.in.in.h:2
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:1
 msgid "Maybe a Gnome shell like dashboard for Xfce"
-msgstr ""
+msgstr "Xfce için belki Gnome shell'e benzeyen bir kumanda paneli"
 
 #: ../data/xfdashboard-autostart.desktop.in.in.h:2
 msgid "Start xfdashboard as daemon in background"
-msgstr ""
+msgstr "Xfdashboard'u arka planda başlat"
 
 #: ../data/xfdashboard-settings.desktop.in.in.h:1
 msgid "Xfdashboard settings"
-msgstr ""
+msgstr "Xfdashboard ayarları"
 
 #: ../data/xfdashboard-settings.desktop.in.in.h:2
 msgid "Configure xfdashboard"
-msgstr ""
+msgstr "Xfdashboard'ı yapılandır"
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:2
 msgid ""
 "Xfdashboard provides a GNOME shell dashboard like interface for use with "
 "Xfce desktop."
-msgstr ""
+msgstr "Xfdashboard, Xfce masaüstüyle birlikte kullanılmak üzere bir GNOME kabuk gösterge tablası gibi bir arabirim sağlar."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:3
 msgid ""
@@ -51,15 +52,15 @@ msgid ""
 "provides an overview of applications currently open enabling the user to "
 "switch between different applications. The search feature works like Xfce's "
 "app finder which makes it convenient to search for and start applications."
-msgstr ""
+msgstr "Herhangi bir klavye kısayoluna gidecek şekilde yapılandırılabilir ve yürütülürken, kullanıcıların farklı uygulamalar arasında geçiş yapabilmeleri için halen açık olan uygulamalara genel bir bakış sağlar. Arama özelliği, uygulamaları aramak ve başlatmak için uygun Xfce'nin uygulama bulucusu gibi çalışır."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:4
 msgid "Browsing applications"
-msgstr ""
+msgstr "Uygulamar taranıyor"
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:5
 msgid "Searching applications"
-msgstr ""
+msgstr "Uygulamaları aranıyor"
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:6
 msgid ""
@@ -67,25 +68,25 @@ msgid ""
 "application when the pointer is near a specific corner of the screen. It "
 "also introduce a new settings application which allows to enable and/or "
 "disable plugin as well as to configure them."
-msgstr ""
+msgstr "Bu kararsız geliştirme, işaretçi ekranın belirli bir köşesine yakın olduğunda bu uygulamayı etkinleştirmek için sıcak köşe eklentisi getiriyor. Ayrıca, eklentiyi etkinleştirmek ve/veya devre dışı bırakmak ve bunları yapılandırmak için izin veren yeni bir ayar uygulaması sunuyor."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:7
 msgid ""
 "This unstable development introduces a new search provider plugin which uses"
 " installed Gnome-Shell search providers as additional source."
-msgstr ""
+msgstr "Bu istikrarsız gelişme, yüklü Gnome-Shell arama sağlayıcılarını ek kaynak olarak kullanan yeni bir arama sağlayıcısı eklentisi sunuyor."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:8
 msgid ""
 "This unstable development introduces a new optional configuration to themes "
 "about defining which elements can be focused and in which order."
-msgstr ""
+msgstr "Bu istikrarsız geliştirme, hangi öğelerin hangi sırada odaklanabileceğini tanımlamakla ilgili yeni bir isteğe bağlı konfigürasyonu temalara sunar."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:9
 msgid ""
 "This unstable development introduces a basic and simple plugin system as "
 "well as a sample plugin adding a new view showing a clock."
-msgstr ""
+msgstr "Bu istikrarsız geliştirme, temel ve basit bir eklenti sisteminin yanı sıra, saati gösteren yeni bir görünüm ekleyerek bir örnek eklenti sunar."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:10
 msgid ""
@@ -93,7 +94,7 @@ msgid ""
 "start a new instance of an application or to activate the current window. It"
 " also improves the detection of running application as well as bug-fixes and"
 " other smaller improvements."
-msgstr ""
+msgstr "Bu kararsız geliştirme, bir uygulamanın yeni bir örneğini başlatmaya veya geçerli pencereyi etkinleştirmeye izin vermek için yeni yapılandırılabilir seçenekler sunar. Ayrıca çalışan uygulamanın yanı sıra hata düzeltmeleri ve diğer küçük geliştirmelerin algılanmasını da geliştirir."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:11
 msgid ""
@@ -101,7 +102,7 @@ msgid ""
 "loading window contents in background and it shows also running applications"
 " in quicklaunch for those not being stored as favourites. As usual it also "
 "contains a lots of bug-fixes and smaller improvements."
-msgstr ""
+msgstr "Bu istikrarsız geliştirme, arka planda pencere içeriğini yüklemeyi hızlandırmak için yeni yapılandırılabilir seçenekler sunar ve sık kullanılanlar olarak saklanmayan uygulamalar için hızlı çalışan uygulamaların da çalıştığını gösterir. Her zamanki gibi hata düzeltmeleri ve daha küçük geliştirmeler de içerir."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:12
 msgid ""
@@ -109,13 +110,13 @@ msgid ""
 "loads the window contents in background to make the application feel "
 "smoother and faster, especially at start-up. It also contains a lots of bug-"
 "fixes and smaller improvements."
-msgstr ""
+msgstr "Bu istikrarsız geliştirme, çalışma alan seçicisine yeni seçenekler getirir ve özellikle başlangıçta uygulamanın daha yumuşak ve daha hızlı hissetmesini sağlamak için pencere içeriğini arka planda yükler. Ayrıca bir sürü hata düzeltmesi ve daha küçük iyileştirmeler içerir."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:13
 msgid ""
 "This release hopefully fixes problems with the stage resizes finally. Also "
 "the method to determine the desktop window was changed."
-msgstr ""
+msgstr "Bu sürüm umarım son olarak zemin yeniden boyutlandırma sorunlarını giderir. Ayrıca, masaüstü penceresini belirleme yöntemi değiştirildi."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:14
 msgid ""
