Update README for changes in requirements

--- a/README
+++ b/README
@@ -13,7 +13,6 @@ glib >= 2.32
 gio >= 2.32
 gio-unix-2.0 >= 2.32
 xfconf >= 4.10.0
-dbus-glib >= 0.98
 garcon >= 0.2.0
 gtk+ >= 3.2
 libxfce4util >= 4.10.0
@@ -22,7 +21,12 @@ libxfce4ui >= 4.10.0
 ... and the dependencies of these libraries of course ;)
 
 
-The following libraries are optional:
+The following libraries are semi-optional:
+
+dbus-glib >= 0.98 (required if xfconf < 4.13)
+
+
+The following libraries are optional and configurable:
 
 libXcomposite >= 0.2 (for live windows)
 libXdamage (for live windows)
@@ -32,6 +36,7 @@ libXinerama (for multi-monitor support)
 On debian based distros, all requeriments are installed with:
 
 > apt-get install xfce4-dev-tools build-essential glib2.0 libglib2.0-dev xorg-dev libwnck-3-dev libclutter-1.0-dev libgarcon-1-0-dev libxfconf-0-dev libxfce4util-dev libxfce4ui-2-dev libxcomposite-dev libxdamage-dev libxinerama-dev
+
 
 Homepage
 ========
