--- a/po/de.po
+++ b/po/de.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Gregor Santner <gsantner@mailbox.org>, 2017
+# Vinzenz Vietzke <vinz@vinzv.de>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2017-06-29 02:59+0000\n"
-"Last-Translator: Gregor Santner <gsantner@mailbox.org>\n"
+"PO-Revision-Date: 2017-10-02 17:36+0000\n"
+"Last-Translator: Vinzenz Vietzke <vinz@vinzv.de>\n"
 "Language-Team: German (http://www.transifex.com/xfdashboard/xfdashboard/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,11 +57,11 @@ msgstr ""
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:4
 msgid "Browsing applications"
-msgstr ""
+msgstr "Anwendungen durchsuchen"
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:5
 msgid "Searching applications"
-msgstr ""
+msgstr "Suche Anwendungen"
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:6
 msgid ""
@@ -235,17 +236,17 @@ msgstr ""
 
 #: ../data/data/preferences.ui.h:2
 msgid "Configure plugin"
-msgstr ""
+msgstr "Plugin konfigurieren"
 
 #: ../data/data/preferences.ui.h:3
 msgid ""
 "<span size=\"large\"><b>Xfdashboard settings</b></span>\n"
 "Configure xfdashboard"
-msgstr ""
+msgstr "<span size=\"large\"><b>Xfdashboard Einstellungen</b></span>\nxfdashboard konfigurieren"
 
 #: ../data/data/preferences.ui.h:5
 msgid "<b>General settings:</b>"
-msgstr ""
+msgstr "<b>Allgemeine Einstellungen:</b>"
 
 #: ../data/data/preferences.ui.h:6
 msgid "Reset search view when resumed"
@@ -3381,7 +3382,7 @@ msgstr ""
 
 #: ../libxfdashboard/windows-view.c:1905
 msgid "Current workspace"
-msgstr ""
+msgstr "Derzeitige Arbeitsfläche"
 
 #: ../libxfdashboard/windows-view.c:1906
 msgid "The current workspace whose windows are shown"
@@ -3437,7 +3438,7 @@ msgstr ""
 
 #: ../libxfdashboard/window-tracker.c:912
 msgid "Primary monitor"
-msgstr ""
+msgstr "Primärer Bildschirm"
 
 #: ../libxfdashboard/window-tracker.c:913
 msgid "The current primary monitor"
@@ -3445,7 +3446,7 @@ msgstr ""
 
 #: ../libxfdashboard/window-tracker-monitor.c:282
 msgid "Monitor index"
-msgstr ""
+msgstr "Bildschirm-Index"
 
 #: ../libxfdashboard/window-tracker-monitor.c:283
 msgid "The index of this monitor"
@@ -3453,7 +3454,7 @@ msgstr ""
 
 #: ../libxfdashboard/window-tracker-monitor.c:290
 msgid "Is primary"
-msgstr ""
+msgstr "Ist primär"
 
 #: ../libxfdashboard/window-tracker-monitor.c:291
 msgid "Whether this monitor is the primary one"
@@ -3475,7 +3476,7 @@ msgstr ""
 
 #: ../libxfdashboard/workspace-selector.c:1255
 msgid "Maximum size"
-msgstr ""
+msgstr "Maximale Größe"
 
 #: ../libxfdashboard/workspace-selector.c:1256
 msgid "The maximum size of this actor for opposite direction of orientation"
@@ -3512,7 +3513,7 @@ msgstr ""
 #. Set up view
 #: ../plugins/clock-view/clock-view.c:313 ../plugins/clock-view/plugin.c:311
 msgid "Clock"
-msgstr ""
+msgstr "Uhr"
 
 #: ../plugins/clock-view/clock-view-settings.c:233
 msgid "Hour color"
@@ -3750,16 +3751,16 @@ msgstr ""
 
 #: ../plugins/hot-corner/plugin.c:268
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: ../plugins/hot-corner/plugin.c:272 ../settings/general.c:367
 msgid "ms"
-msgstr ""
+msgstr "ms"
 
 #: ../plugins/hot-corner/plugin.c:276 ../settings/general.c:124
 #: ../settings/general.c:371
 msgid "Immediately"
-msgstr ""
+msgstr "Sofort"
 
 #. Add widget to choose activation corner
 #: ../plugins/hot-corner/plugin.c:304
@@ -3778,7 +3779,7 @@ msgstr ""
 
 #: ../plugins/hot-corner/plugin.c:418
 msgid "Hot corner"
-msgstr ""
+msgstr "Heiße Ecke"
 
 #: ../plugins/hot-corner/plugin.c:419
 msgid ""
@@ -3788,7 +3789,7 @@ msgstr ""
 
 #: ../settings/general.c:116
 msgid "Do nothing"
-msgstr ""
+msgstr "Nichts tun"
 
 #: ../settings/general.c:117
 msgid "Windows view"
@@ -3800,19 +3801,19 @@ msgstr "Anwendungs-Ansicht"
 
 #: ../settings/general.c:125
 msgid "High"
-msgstr ""
+msgstr "Hoch"
 
 #: ../settings/general.c:126
 msgid "Normal"
-msgstr ""
+msgstr "Normal"
 
 #: ../settings/general.c:127
 msgid "Low"
-msgstr ""
+msgstr "Niedrig"
 
 #: ../settings/general.c:312
 msgid "seconds"
-msgstr ""
+msgstr "Sekunden"
 
 #: ../settings/general.c:707 ../settings/plugins.c:1112
 #: ../settings/themes.c:913
@@ -3850,11 +3851,11 @@ msgstr ""
 
 #: ../settings/plugins.c:958
 msgid "Name"
-msgstr ""
+msgstr "Name"
 
 #: ../settings/themes.c:784
 msgid "Theme"
-msgstr ""
+msgstr "Thema"
 
 #: ../settings/main.c:46
 msgid "Settings manager socket"
@@ -3862,16 +3863,16 @@ msgstr ""
 
 #: ../settings/main.c:46
 msgid "SOCKET ID"
-msgstr ""
+msgstr "SOCKET-NUMMER"
 
 #: ../settings/main.c:47
 msgid "Version information"
-msgstr ""
+msgstr "Versionsinformationen"
 
 #. Initialize GTK+
 #: ../settings/main.c:57
 msgid "."
-msgstr ""
+msgstr "."
 
 #: ../settings/main.c:61
 #, c-format
