--- a/po/fr.po
+++ b/po/fr.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2016-08-02 20:48+0000\n"
+"PO-Revision-Date: 2017-09-23 21:04+0000\n"
 "Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/xfdashboard/xfdashboard/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -237,7 +237,7 @@ msgstr "<span size=\"large\"><b>Paramètres Xfdashboard</b></span>"
 
 #: ../data/data/preferences.ui.h:2
 msgid "Configure plugin"
-msgstr "Configurer greffon"
+msgstr "Configurer le greffon"
 
 #: ../data/data/preferences.ui.h:3
 msgid ""
@@ -306,7 +306,7 @@ msgstr "Priorité de la création du contenu de la fenêtre"
 
 #: ../data/data/preferences.ui.h:26
 msgid "Always start a new instance for application"
-msgstr "Toujours commencer une nouvelle instance pour l'application"
+msgstr "Toujours démarre une nouvelle instance pour l'application"
 
 #: ../data/data/preferences.ui.h:27
 msgid ""
@@ -627,7 +627,7 @@ msgstr "Impossible d'initialiser le gestionnaire de greffons"
 
 #: ../libxfdashboard/application.c:457
 msgid "Could not setup plugin manager"
-msgstr "Impossible configuration gestionnaire de greffons"
+msgstr "Impossible de configurer le gestionnaire de greffons"
 
 #: ../libxfdashboard/application.c:478
 #, c-format
@@ -908,7 +908,7 @@ msgstr "Impossible de créer l'acteur pour l'ID de ordinateur de bureau « %s »
 
 #: ../libxfdashboard/applications-search-provider.c:1286
 msgid "Sort mode"
-msgstr "Mode Tri"
+msgstr "Mode tri"
 
 #: ../libxfdashboard/applications-search-provider.c:1287
 msgid "Defines how to sort matching applications"
