--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2016-03-02 18:12+0000\n"
-"Last-Translator: Stephan Haller <nomad@froevel.de>\n"
+"PO-Revision-Date: 2017-09-23 20:41+0000\n"
+"Last-Translator: gmcholle <nomad@froevel.de>\n"
 "Language-Team: Italian (Italy) (http://www.transifex.com/xfdashboard/xfdashboard/language/it_IT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
