--- a/po/sr.po
+++ b/po/sr.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2016-03-02 18:12+0000\n"
-"Last-Translator: Stephan Haller <nomad@froevel.de>\n"
+"PO-Revision-Date: 2017-09-21 23:53+0000\n"
+"Last-Translator: gmcholle <nomad@froevel.de>\n"
 "Language-Team: Serbian (http://www.transifex.com/xfdashboard/xfdashboard/language/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
