--- a/po/sr.po
+++ b/po/sr.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Саша Петровић <salepetronije@gmail.com>, 2014-2015
+# Саша Петровић <salepetronije@gmail.com>, 2014-2015,2017
 # Саша Петровић <salepetronije@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2017-09-21 23:53+0000\n"
-"Last-Translator: gmcholle <nomad@froevel.de>\n"
+"PO-Revision-Date: 2017-11-04 19:17+0000\n"
+"Last-Translator: Саша Петровић <salepetronije@gmail.com>\n"
 "Language-Team: Serbian (http://www.transifex.com/xfdashboard/xfdashboard/language/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1644,7 +1644,7 @@ msgstr "Тренутни број стубаца у овом распореду"
 
 #: ../libxfdashboard/emblem-effect.c:479
 msgid "Size of icon"
-msgstr ""
+msgstr "Величина сличице"
 
 #: ../libxfdashboard/emblem-effect.c:487
 msgid "Padding around emblem"
